source/blender/editors/include/ED_info.h
@@ -31,8 +31,13 @@ struct Main;
 /* info_stats.c */
 void ED_info_stats_clear(struct ViewLayer *view_layer);
 const char *ED_info_statusbar_string(struct Main *bmain,
-                                     struct bScreen *screen,
-                                     struct bContext *C);
+                                     struct Scene *scene,
+                                     struct ViewLayer *view_layer);
+
+const char *ED_info_statistics_string(struct Main *bmain,
+                                      struct Scene *scene,
+                                      struct ViewLayer *view_layer);
+
 void ED_info_draw_stats(
     struct Main *bmain, Scene *scene, ViewLayer *view_layer, int x, int *y, int height);
 
